添加eureka集群的例子

--- a/cloud-package-dep/pom.xml
+++ b/cloud-package-dep/pom.xml
@@ -98,5 +98,7 @@
 
 	<modules>
 		<module>cloud-eureka-server</module>
+		<module>cloud-eureka-server-A</module>
+		<module>cloud-eureka-server-B</module>
 	</modules>
 </project>
