修改配置文件

--- a/spring-cloud-service-B/src/main/resources/bootstrap.properties
+++ b/spring-cloud-service-B/src/main/resources/bootstrap.properties
@@ -14,6 +14,6 @@ management.security.enabled=false
 #spring.cloud.config.label=master
 
 #从配置中心读取config
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8002/eureka/,http://127.0.0.1:8001/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8001/eureka/
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=configserver
