路由配置 添加eureka client

--- a/spring-cloud-gateway/src/main/resources/application.properties
+++ b/spring-cloud-gateway/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 logging.level.org.springframework.cloud.gateway=TRACE
 management.endpoints.web.exposure.include=*
 server.port = 8080
+
+spring.application.name=sc-gateway-server
+spring.cloud.gateway.discovery.locator.enabled=true
+
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8001/eureka/
